tests/ui/feature-gates/feature-gate-explicit-extern-abis.future_feature.stderr
error: `extern` declarations without an explicit ABI are disallowed
  --> $DIR/feature-gate-explicit-extern-abis.rs:27:1
   |
LL | extern fn _foo() {}
   | ^^^^^^ help: specify an ABI: `extern "<abi>"`
   |
   = help: prior to Rust 2024, a default ABI was inferred

error: `extern` declarations without an explicit ABI are disallowed
  --> $DIR/feature-gate-explicit-extern-abis.rs:33:8
   |
LL | unsafe extern fn _bar() {}
   |        ^^^^^^ help: specify an ABI: `extern "<abi>"`
   |
   = help: prior to Rust 2024, a default ABI was inferred

error: `extern` declarations without an explicit ABI are disallowed
  --> $DIR/feature-gate-explicit-extern-abis.rs:39:8
   |
LL | unsafe extern {}
   |        ^^^^^^ help: specify an ABI: `extern "<abi>"`
   |
   = help: prior to Rust 2024, a default ABI was inferred

error: aborting due to 3 previous errors

